-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0
-
None
-
Windows 7
-
b0854e3c71803c8397f9bb48b8766c151b6e0edd
If one right-clicks a console log shown in the QML/JS console the "Show in Editor" is always greyed out. And it is not possible to "jump" to the line in the editor by double-clicking the output in the console window.
For Gerrit Dashboard: QTCREATORBUG-9337 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
56966,2 | QmlConsole: Fix bug: Jump to location in editor | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |