QmlConsole: Fix bug: Jump to location in editor

Since the file path starts with file:/// use QUrl to
get local file name.

Task-number: QTCREATORBUG-9337
Change-Id: Icf591fdcab8cb626cfbf844c451a2c87c07b853a
Reviewed-by: Kai Koehne <kai.koehne@digia.com>