src/plugins/qmljstools/qmlconsoleitemdelegate.cpp
@@ -33,6 +33,7 @@
 #include <QPainter>
 #include <QTreeView>
 #include <QScrollBar>
+#include <QUrl>
 
 const char CONSOLE_LOG_BACKGROUND_COLOR[] = "#E8EEF2";
 const char CONSOLE_WARNING_BACKGROUND_COLOR[] = "#F6F4EB";
@@ -215,6 +216,9 @@ void QmlConsoleItemDelegate::paint(QPainter *painter, const QStyleOptionViewItem
     if (showFileLineInfo) {
         // Check for file info
         QString file = index.data(QmlConsoleItemModel::FileRole).toString();
+        const QUrl fileUrl = QUrl(file);
+        if (fileUrl.isLocalFile())
+            file = fileUrl.toLocalFile();
         if (!file.isEmpty()) {
             QFontMetrics fm(option.font);
             // Paint FileArea
