src/plugins/qmljstools/qmlconsoleview.cpp
@@ -226,8 +226,10 @@ void QmlConsoleView::onRowActivated(const QModelIndex &index)
         return;
 
     // See if we have file and line Info
-    QString filePath = model()->data(index,
-                                     QmlConsoleItemModel::FileRole).toString();
+    QString filePath = model()->data(index, QmlConsoleItemModel::FileRole).toString();
+    const QUrl fileUrl = QUrl(filePath);
+    if (fileUrl.isLocalFile())
+        filePath = fileUrl.toLocalFile();
     if (!filePath.isEmpty()) {
         QFileInfo fi(filePath);
         if (fi.exists() && fi.isFile() && fi.isReadable()) {
@@ -245,6 +247,9 @@ void QmlConsoleView::copyToClipboard(const QModelIndex &index)
     QString contents = model()->data(index, QmlConsoleItemModel::ExpressionRole).toString();
     // See if we have file and line Info
     QString filePath = model()->data(index, QmlConsoleItemModel::FileRole).toString();
+    const QUrl fileUrl = QUrl(filePath);
+    if (fileUrl.isLocalFile())
+        filePath = fileUrl.toLocalFile();
     if (!filePath.isEmpty()) {
         contents = QString(QLatin1String("%1 %2: %3")).arg(contents).arg(filePath).arg(
                     model()->data(index, QmlConsoleItemModel::LineRole).toString());
@@ -260,6 +265,9 @@ bool QmlConsoleView::canShowItemInTextEditor(const QModelIndex &index)
 
     // See if we have file and line Info
     QString filePath = model()->data(index, QmlConsoleItemModel::FileRole).toString();
+    const QUrl fileUrl = QUrl(filePath);
+    if (fileUrl.isLocalFile())
+        filePath = fileUrl.toLocalFile();
     if (!filePath.isEmpty()) {
         QFileInfo fi(filePath);
         if (fi.exists() && fi.isFile() && fi.isReadable())
